Fixing ButtonGroup overflow bug and updating styles

--- a/src/styles/ButtonGroup.css
+++ b/src/styles/ButtonGroup.css
@@ -7,6 +7,7 @@
     border-radius: var(--border-radius);
     width: fit-content;
     transition: 0.5s;
+    overflow: hidden;
 }
 
 .button-group-disabled, .button-group-disabled * {
@@ -25,19 +26,19 @@
     padding: 10px;
     border-right: 2px solid var(--blue-primary);
     user-select: none;
-    font-weight: 600;
+    font-weight: 500;
     color: var(--text-gray);
     transition: 0.5s;
+    cursor: pointer;
 }
 
 .button-group-option:hover {
-    cursor: pointer;
     background-color: var(--bg-blue);
-    color: var(--text);
+    color: var(--blue-primary);
 }
 
 .button-group-option-selected {
     background-color: var(--bg-blue) !important;
-    color: var(--text) !important;
+    color: var(--blue-primary) !important;
     cursor: not-allowed;
 }
